# renamer

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
file_renamer/: cli.py  renamer.py
tests/: test_renamer.py
