[metadata]
name = file-renamer
version = 1.0.0
author = Sachin Arora
author_email = schnaror@gmail.com
description = A Python package to recursively rename files, directories, and replace content.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sachnaror/renamer
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.12
install_requires =
    # Add dependencies here if required, e.g., requests>=2.0.0

[options.packages.find]
where = file_renamer

[options.entry_points]
console_scripts =
    file-renamer = file_renamer.cli:main
